<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="109dp"
            android:layout_height="88dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/question_text_view"
            style="@style/text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:fontFamily="@font/autour_one"
            android:text="@string/textview_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_imageView" />

        <Button
            android:id="@+id/true_button"
            style="@style/btn_style"
            android:layout_marginTop="284dp"
            android:text="@string/true_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/false_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/false_button"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="284dp"
            android:backgroundTint="#F60000"
            android:text="@string/false_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/true_button"
            app:layout_constraintTop_toBottomOf="@+id/logo_imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/prev_button"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/prev_btn_text"
            android:textColor="#00FF00"
            app:layout_constraintEnd_toStartOf="@+id/next_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/false_button" />

        <Button
            android:id="@+id/next_button"
            style="@style/btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/next_btn_text"
            android:textColor="#FF0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/prev_button"
            app:layout_constraintTop_toBottomOf="@+id/true_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>